--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -3,4 +3,12 @@
     background: #f5f5f5;
 }
 
+.form-control {
+    border-radius: 1px;
+}
+
+.btn {
+    border-radius: 1px;
+}
+
 @import "toastr";
